--- a/UserManagerDemo/UserManagerDemo.csproj
+++ b/UserManagerDemo/UserManagerDemo.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{85852C2D-A3A3-48DD-98FC-8446C720FBA7}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>UserManager</RootNamespace>
-    <AssemblyName>UserManager</AssemblyName>
+    <RootNamespace>UserManagerDemo</RootNamespace>
+    <AssemblyName>UserManagerDemo</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\UserManager.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\UserManagerDemo.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
